--- a/css/utils.css
+++ b/css/utils.css
@@ -1,6 +1,6 @@
 .simple-text {
-  color: #434244;
-  font-size: 20px;
+  color      : #434244;
+  font-size  : 20px;
   font-weight: 500;
   line-height: 1.5;
 }
@@ -9,18 +9,20 @@
   margin-left: 140px;
 }
 .what-we-do__services {
-  display: flex;
-  height: 100%;
+  display : flex;
+  height  : 100%;
   position: relative;
 }
 .what-we-do__services .item {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  margin: auto;
-  min-width: 900px;
-  position: relative;
-  width: 100%;
+  align-items       : center;
+  animation-duration: 2s;
+  transition        : opacity 1s;
+  display           : flex;
+  justify-content   : center;
+  margin            : auto;
+  min-width         : 900px;
+  position          : relative;
+  width             : 100%;
 }
 .what-we-do__services .item-description {
   margin-left: 50px;
@@ -32,20 +34,20 @@
   width: 100%;
 }
 .what-we-do__services .item h5.title {
-  font-size: 40px;
-  font-weight: 700;
+  font-size     : 40px;
+  font-weight   : 700;
   letter-spacing: 1.33px;
-  line-height: 36px;
-  margin-bottom: 15px;
+  line-height   : 36px;
+  margin-bottom : 15px;
 }
 .what-we-do__services .item .content {
-  color: #434244;
-  font-size: 20px;
+  color         : #434244;
+  font-size     : 20px;
   letter-spacing: .67px;
-  line-height: 37px;
+  line-height   : 37px;
 }
-.what-we-do__services .item:nth-of-type(1) .item-description > div,
-.what-we-do__services .item:nth-of-type(4) .item-description > div {
+.what-we-do__services .item: nth-of-type(1) .item-description > div,
+.what-we-do__services .item: nth-of-type(4) .item-description > div {
   max-width: 270px;
 }
 .what-we-do__services .item:nth-of-type(2) .item-description > div {
@@ -59,7 +61,7 @@
 }
 .what-we-do__header {
   align-items: flex-end;
-  display: flex;
+  display    : flex;
 }
 .v-align-top {
   top: -20%;
