--- a/css/services.css
+++ b/css/services.css
@@ -180,7 +180,7 @@
   z-index  : 2;
 }
 .service.infrastructure .characters .planet {
-  animation: infrastructure-planet 10s infinite ease-in-out;
+  animation: floatingInSpace 5s infinite ease-in-out;
   left     : 70px;
   top      : 20px;
   transform: translateX(-50%);
