--- a/css/app.css
+++ b/css/app.css
@@ -8,12 +8,10 @@
 body, html {
   -webkit-font-smoothing: antialiased;
   font-family           : "Raleway", sans-serif;
+  height: 100vh;
   margin                : 0;
   padding               : 0;
-}
-body.projects {
-  background           : linear-gradient(to bottom, #00a0f5 50%, #0055bf);
-  background-attachment: fixed;
+  width: 100vw;
 }
 nav.TopNav {
   align-items    : center;
@@ -54,10 +52,29 @@ ul {
   list-style: none;
   padding   : 0;
 }
+a,
+button,
+input[type="button"],
+input[type="submit"] {
+  cursor: pointer;
+}
+#container {
+  height: 101%;
+  overflow: auto;
+}
 #HorizontalScrollContainer {
+  display: flex;
+  height: auto;
   position   : fixed;
   top        : 0;
-  white-space: nowrap;
+  /* white-space: nowrap; */
+}
+#VerticalContainer {
+  background: linear-gradient(to bottom, #00a0f5 33.3%, #0055bf);
+  background-attachment: fixed;
+  min-width: 100vw;
+  overflow: hidden scroll;
+  position: relative;
 }
 .Page {
   display   : inline-block;
@@ -142,7 +159,7 @@ ul {
   max-width: 150px;
   position : fixed;
   top      : 78%;
-  z-index: 1;
+  z-index  : 1;
 }
 .dot-planet.planet-8 {
   left   : -75px;
@@ -169,6 +186,7 @@ ul {
   filter: blur(5px);
 }
 .random-planet {
+  left: 0;
   max-width: 250px;
   position : absolute;
   top      : 75%;
@@ -252,16 +270,9 @@ ul {
   flex-direction: row;
   width         : fit-content;
 }
-.Page.Page__WhatWeDo h1.header {
-  font-size     : 165px;
-  font-weight   : 900;
-  letter-spacing: 5.5px;
-  line-height   : 145px;
-  margin        : 0;
-  max-width     : 800px;
-}
 .Page.Page__WhatWeDo .what-we-do {
-  margin: 0px 0px 12px 24px;
+  margin-left: 18px;
+  padding-top: 60px;
   width : 460px;
 }
 .Page.Page__Services {
