--- a/css/projects.css
+++ b/css/projects.css
@@ -3,23 +3,32 @@
   position   : relative;
   width      : 100vw;
 }
+#Projects .Projects__Cover {
+  align-self: baseline;
+  width: 40%;
+}
+#Projects .Portal__mask {
+  transform: rotate(-90deg);
+}
 #Projects .Projects__Item {
   align-items    : center;
   display        : flex;
-  height         : calc(100vh - 61px);
+  height         : calc(100vh - 71px);
   justify-content: center;
-  padding: 10vh 10vw;
+  padding        : 10vh 10vw;
   position       : relative;
   width          : 100%;
   z-index        : 2;
 }
 #Projects .Projects__Item:nth-child(1) {
-  
+  background-image: none !important;
+  justify-content: space-between !important;
+  padding         : 0;
 }
 #Projects .Projects__Item:nth-child(odd) {
-  background-image: url("/assets/img/projects/divider.svg");
+  background-image : url("/assets/img/projects/divider.svg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size  : cover;
 }
 #Projects .Projects__Item:nth-child(odd) .label {
   color: #000000;
@@ -31,13 +40,13 @@
   width: 50vw;
 }
 #Projects .Projects__Item .label {
-  align-items: center;
-  color      : #ffffff;
-  display    : flex;
-  font-size  : 36px;
-  font-weight: 900;
-  line-height: 1;
-  max-width: 75%;
+  align-items   : center;
+  color         : #ffffff;
+  display       : flex;
+  font-size     : 36px;
+  font-weight   : 900;
+  line-height   : 1;
+  max-width     : 75%;
   padding-bottom: 18px;
 }
 #Projects .Projects__Item .label img {
@@ -48,7 +57,7 @@
   position: relative;
 }
 #Projects .Projects__Item .project-description {
-  color: #ffffff;
+  color  : #ffffff;
   padding: 0 24px;
 }
 .projects-title {
