--- a/css/app.css
+++ b/css/app.css
@@ -267,7 +267,7 @@ input[type="submit"] {
 }
 .Page.Page__WhatWeDo {
   align-items   : center;
-  flex-direction: row;
+  padding-right: 120px;
   width         : fit-content;
 }
 .Page.Page__WhatWeDo .what-we-do {
@@ -278,17 +278,4 @@ input[type="submit"] {
 .Page.Page__Services {
   min-width: 4000px;
   padding  : 0;
-}
-.Page.Page__Portal {
-  /* min-width: 900px; */
-  padding: 0;
-  width  : auto;
-}
-.Page.Page__Portal .Portal__Start {
-  height: 100%;
-  width : 100%;
-}
-.Page.Page__Portal .Portal__Start img {
-  height: inherit;
-  width : inherit;
 }
