--- a/css/planets.css
+++ b/css/planets.css
@@ -11,15 +11,29 @@
 }
 .colmed-dot-planet {
   max-width: 60px;
-  position: absolute;
-  right: 15%;
-  top: 10%;
+  position : absolute;
+  right    : 15%;
+  top      : 10%;
 }
 .colmed-planet {
-  bottom: 10vh;
+  bottom   : 10vh;
   max-width: 10vw;
+  position : absolute;
+  right    : 35vw;
+}
+.gsp-dot-planet {
+  bottom: 15%;
+  filter: blur(5px);
+  max-width: 60px;
   position: absolute;
-  right: 35vw;
+  right: 10%;
+}
+.gsp-random-planet {
+  bottom: -10%;
+  left: -5%;
+  max-width: 30%;
+  position: absolute;
+  transform: rotate(-30deg);
 }
 .orbit {
   max-width: 100vw;
@@ -34,11 +48,25 @@
   top      : 30vh;
 }
 .procaps-planet {
-  filter: blur(7.5px);
+  filter   : blur(7.5px);
   left     : 15vh;
   max-width: 250px;
   position : absolute;
   top      : 15vh;
+}
+.transito-dot-planet {
+  filter: blur(10px);
+  max-width: 10%;
+  position: absolute;
+  right: 10vw;
+  top: 10vh;
+}
+.transito-orbit {
+  max-width: 100vw;
+  position: absolute;
+}
+.transito-random-planet {
+  position: absolute;
 }
 .transmetro-planet {
   max-width: 250px;
